--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "chat_application",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://kapilasthana2019.github.io/SearchMovies",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
@@ -16,6 +17,7 @@
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
+    "deploy":"npm run build&&gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -35,5 +37,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
   }
 }
